# libmediafy

./: .gitignore  CMakeLists.txt  README.md  build_libmediafy_android.sh  build_libmediafy_linux.sh
android/: AndroidManifest.xml
android/src/: tech_smallwonder_libmediafy_MediaPlayer.h
android/src/tech/smallwonder/libmediafy/: MediaPlayer.java  MediafyVideoView.java  VideoRenderer.java
external_libs/ffmpeg/include/libavutil/: ffversion.h
include/: api.h
src/: ACompressor.cpp  ACompressor.h  AudioOutput.cpp  AudioOutput.h  Caption.h  CaptionsParser.cpp  CaptionsParser.h  Decoder.cpp  Decoder.h  Deleters.h  Encoder.cpp  Encoder.h  Equalizer.h  Gain.h  Media.cpp  Media.h  MediaPlayer.cpp  MediaPlayer.h  Resampler.cpp  Resampler.h  StereoWidener.h  SubtitlesManager.cpp  SubtitlesManager.h  TSQueue.h  ThreadExecutor.cpp  ThreadExecutor.h  VideoOutput.cpp  VideoOutput.h  lib.cpp
